assets/css/style.css
/* ... */
.icons-hanging li {
    padding-top: 10px;
    padding-bottom: 10px;
}
.icons-hanging li a {
    color: white;
}
#social-icons-body {
    position: fixed;
    z-index: 555;
}
.gallery-container h1 {
    text-align: center;
    margin-top: 50px;
    font-family: 'Droid Sans', sans-serif;
    font-weight: bold;
}

.gallery-container p.page-description {
    text-align: center;
    margin: 25px auto;
    font-size: 18px;
    color: #fff;
}
h2 {
    font-size: 1.5rem !important;
}
.founder {
    /* margin-top: 30px; */
    padding-top: 30px;
}
.next-head {
    /* background-image: url('../img/211.png'); */
    margin-bottom: 0px;
    padding-bottom: 0px;
    /* background-size: cover;
    background-repeat: no-repeat; */
}
.founder {
    /* background-image: url('../img/21.png'); */
    margin-bottom: 0px;
    padding-bottom: 0px;
    background-size: cover;
    background-repeat: no-repeat;
}
#next-head .container {
    padding-top:35px;
}
/* #vision {
    background-size: cover;
    background-repeat: no-repeat;
} */
/* mobile view start */
@media(max-width:568px){
    #home{
        background-image: url('../img/mob2.png'); 
        background-repeat: no-repeat; 
        background-size: 181%;
        background-position-x: center;
        background-position-y: -3px;
    }
    #about h2{
        font-size:1.3rem !important;
    }
    .masthead {
        padding-top:150px !important;
        height: 94vh;
    }
    .text-typing {
        line-height: 51px;
        padding-top: 0px !important;
        font-size: 1.5em !important;
        margin-right:50px;
        margin-left:23px;
    }
    #mobile-img{
        display:none !important;
    }
    #mobile-img{
        width: 80%;
        margin-top: 16px;
        margin-right: 74px;
    }
    #ctc-btn{
        position: absolute;
        top: 83%;
    }
    #human{
        background-image: none !important;
    }
    #about h2 {
        font-weight: bold;
        letter-spacing: 5px;
        /* font-size: 2rem !important; */
    }
    #about {
        background-size: 758px 71px !important;
    }
    #desktop {
        display: none;
    }
    .founder .text-center{
        margin-top:20px;
        margin-bottom: 20px;
    }
    #features h2 {
        font-weight: 900;
        line-height: 36px;
        font-size: 2rem !important;
    }
    #features .linkediting {
        padding-left: 0px !important;
    }
    #mobile {
        text-align: center;
    }
    #feature-img{
        display: none;
    }
    #full-faq {
        padding-top: 50px !important;
    }
    #full-faq .faq-area .card .card-header h2 button {
        font-size: 1rem !important;
    }
    .section-heading h2{
        font-weight: 600px !important;
    }
    #mainNav.navbar-shrink {
        background: #fff !important;
    }
    #mainNav .navbar-toggler {
        color: #4d0f28 !important;
    }
    .navbar-nav {
        margin-left: 0px !important;
    }
    .card button {
        font-size: 1rem !important;
        font-weight: 600 !important;
        text-align: left;
        text-transform: none;
        padding-bottom: 8px;
    }
    #mobile-col-row{
        text-align: center;
    }
    /* dark mode start */
    .dark-mode #home{
        background: black !important;
    }
    .dark-mode #about {
    background: black !important;
    }
    .dark-mode #about h2{
        color: white !important;
    }
    .dark-mode #mainNav .navbar-toggler {
        color: white !important;
    }
    .text-typing {
        padding-left:39px;
    }
    .download{
        text-align: center;
    }
    .download img{
        width: 50%;
    }
    .first-music-label{
        width: 89%;
    }
    .second-music-label{
            width: 76%;
    }
    .third-music-label {
        width: 79%;
    }
    .fourth-music-label {
        width: 50%;
    }
    .fifth-music-label{
            width: 79%;
    }
    .sixth-music-label{
            width: 74%;
    }
    .seventh-music-label {
        width: 80%;
    }
    .eight-music-label {
        width: 76%;
    }
    .ninth-music-label {
        width: 83%;
    }
    #features div.card{
        border-width: 0px !important;
        border-color: #fff !important;
    }
    #features .card-header{
        background-color: white !important;
        border-bottom: none !important;
    }
    #features .accordion > .card {
        overflow: visible !important;
    }
}


@media (min-width: 569px) and (max-width: 767px){
    #home{
        background-image:url('../img/Artboard\ 1.png');
    }
    #mainNav {
        border-bottom: none;
    }
    #mainNav.navbar-shrink {
        background: black;
    }
    .full-main-header {
        height: 90vh;
    }
    body {
        padding: 0;
    }
    h2 {
        font-size: 1rem !important;
    }
    .content-section {
        padding-top: 20px;
    }
    #about-img {
        width: 100% !important;
        height: 95% !important;
    }
    .icons-hanging {
        background-color: #4d0f28;
        z-index: 999;
    }
    #about-img img{
        width: 100% !important;
    }
    .text-typing {
        line-height: 61px;
        padding-top: 87px;
    }
    /* #about h2 {
        color: white;
        font-weight: bold;
        letter-spacing: 5px;
        font-size: 2rem !important;
    } */
    .download img{
        width: 70%;
    }
    .music-label{
        margin-left:50px;
    }
    .card button {
        font-size: 1rem !important;
        font-weight: 600 !important;
        text-align: left;
        text-transform: none;
        padding-bottom: 8px;
    }
}


/* header styling start */
.navbar-logo-img {
    width: 170px;
    height: 47px;
}
#mainNav a {
    color: #4d0f28 !important;
    font-weight: 800;
    font-size: 14px;
    line-height: 1.14px;
    letter-spacing: 0px !important;
}
#contactus {
    border-radius: 70px;
}
#moon-img{
    padding-top: 0px;
    color: black !important;
}
/* ... */

